# TerminalSnake

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Dimension.cpp  Dimension.hpp  Enums.hpp  Game.cpp  Game.hpp  Point.cpp  Point.hpp  Snake.cpp  Snake.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
tests/: CMakeLists.txt  DimensionTest.cpp  PointTest.cpp  SnakeTest.cpp
